# downtimer

./: .gitignore  README.md  conf.ini  conf.ini.sample  db_adapters.py  main.py  readme.rst  requirements.txt  roadmap.rst  setup.cfg  show_results.py  test-requirements.txt  tox.ini
db/: models.py
downtimer/: conf.influx_udb.sample  config.py  db_adapters.py  main.py  show_results.py  utils.py
downtimer/db/: models.py
downtimer/tests/unit/daemon/: test.py
tests/unit/daemon/: test.py
