[metadata]
name = downtimer
summary = Utility for gather downtime metrics of openstack
description-file = 
    readme.rst
author = Dmitry Stepanenko
author-email = dstepanenko@mirantis.com

[files]
packages = 
    downtimer

[build_sphinx]
all_files = 1
build-dir = build

[entry_points]
console_scripts =
downtimer=main:main

[wheel]
universal = 1

[pbr]
warnerrors = true
