[metadata]
name = downtimer
summary = Utility for gather downtime metrics of openstack
description-file = 
    readme.rst
author = Dmitry Stepanenko
author-email = dstepanenko@mirantis.com

[files]
packages = 
    downtimer

[entry_points]
console_scripts =
    downtimer = downtimer.main:main

[wheel]
universal = 1

[pbr]
warnerrors = true
